# eBPF-Zone-Verifier

./: .gitignore  Cargo.toml  README.md  SETUP.md  convert.sh  convert_tests.c  obj_prog_type.json  prevail_catalogue.json
bcf-tests/: ksnoop.bpf.o.bcf-bundle
c-ref/: Makefile  bcf_bundle.h  bpf_attr_bcf_ext.h  canonical_hash.c  canonical_hash.h
kernel-patches/: canonical_hash.c  canonical_hash_tool.c  siphash24.h
linux-deltas/: ll2_loader.c  test_loader.c
pcc-tests/: cert_cases.json  pcc_branchguard_examples.c  pcc_branchguard_examples.json  pcc_examples.c  pcc_examples.json  pcc_masked_varoff_examples.c  pcc_masked_varoff_examples.json  pcc_snapshot_examples.c  pcc_snapshot_examples.json
scripts/: baseline_diff.py  bcf_corpus.py  bcf_decode.py  bench.py  bench_e2e.py  bench_e2e_legacy.py  box_gate2.sh  calico71_batched_bundles.sh  calico71_phase2_watcher.sh  calico_anchor_unified_bundle.sh  calico_anchor_unified_bundle_legacy.sh  calico_repr.py  canonicalize_selftest_report.py  capture_baselines.sh  demo_e2e.sh  demo_e2e_cilium.sh  diff_baselines.sh  diff_vs_bcf.py  fa_audit.py  fa_scorecard.py  l3_sweep.py  l3_vm_hashdump.sh  l3_vm_sweep.sh  parallel_selftest.py  prevail.py  sweep_new_only.sh  triage_frs.py  triage_new_tests.py  zovia_memory_cop.sh
selftests/: README.md  and.json  array_access.json  atomic+fetch_add.c  atomic_bounds.json  atomic_xchg.json  atomic_xor.json  baseline_v6.15.json  baseline_v6.15_full.json  basic_call.json  basic_instr.json  bounds.json  bpf_get_stack.json  calls.json  cfg.json  cgroup_inv_retcode.json  cgroup_skb.json  ctx.json  (+32 more)
(+372 files in other folders)
